Start work on commandline interface, Mail handler placeholder is in place, but will be done after commandline interface.
Fixed test for finding immediate problems, spo list can be generated in any order.